--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,9 @@
                         <li>
                             <a href="/input_fields" class="nav-link">Temperature</a>
                         </li>
+                        <li>
+                            <a href="/auth-pred" class="nav-link">Auth Prediction</a>
+                        </li>
 
                         <li>
                             <a href="/sensors" class="nav-link">Sensor</a>
